[tool.poetry]
name = "pier-ds-utils"
version = "0.2.2"
description = "The pier_ds_utils is an internal library used by data science teams to avoid code duplication in common tasks."
authors = ["caiodallaqua <caio.leal@pier.digital>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
setuptools = "^69.0.3"
scikit-learn = "*"
pandas = "*"
statsmodels = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
boto3 = "^1.34.19"
awswrangler = "^3.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
