[tool.poetry]
name = "pier-ds-utils"
version = "0.2.3"
description = "A library for data science teams to avoid code duplication in common tasks involving scikit-learn transformers and estimators."
authors = ["caiodallaqua <caio.leal@pier.digital>", "Gabriel Guarisa <gabriel.guarisa@pier.digital>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
setuptools = "^69.0.3"
scikit-learn = "*"
pandas = "*"
statsmodels = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
boto3 = "^1.34.19"
awswrangler = "^3.5.1"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
